[package]
name = "bevy-game-example"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.17.2"
avian3d = "0.4.1"
#bevy_dev_tools = "0.17.2"
#bevy_solari = "0.17.2"
#argh = "0.1.13"
#bytemuck = "1.24.0"
#rand = "0.9.2"
#rand_chacha = "0.9.0"
parry3d = "0.25.3"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
